[package]
name = "shamir"
version = "1.0.3"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
description = "Shamir is a pure Rust implementation of Shamir's secret sharing"
homepage = "https://github.com/Nebulosus/shamir"
repository = "https://github.com/Nebulosus/shamir.git"
license = "MIT"

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]
